CRUD for tariff
